# fastapi-websockets-llm-example

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  secrets.toml
documentation/: docs.py
internal/auth/: auth_controller.py  auth_model.py  auth_service.py
internal/dependencies/: default_responses.py
internal/dependencies/websockets/: connections.py
internal/health/: healthcheck.py
routes/chat/: chat_controller.py  chat_models.py  chat_service.py
routes/chat_websocket/: chat_controller.py  chat_history.db  chat_models.py  chat_service.py  scratchpad.py
routes/openrouter_websocket/: openrouter_models.py  openrouter_service.py  openrouter_websocket_controller.py
routes/weather/: weather_controller.py  weather_model.py  weather_service.py
site/: README.md  index.html  package.json
site/src/: App.jsx  main.jsx
site/src/components/: ChatComponent.jsx
site/src/components/ui/: card.jsx
src/template_1/: Dockerfile  docker-compose.yml  main.py  secrets.toml
src/template_1/documentation/: docs.py
src/template_1/internal/dependencies/: default_responses.py
src/template_1/internal/health/: healthcheck.py
src/template_1/routes/weather/: weather_controller.py  weather_model.py  weather_service.py
